# CheckWriter

./: .gitignore  README.md  meson.build
.github/workflows/: c-cpp.yml
data/: at.shafq.checkwriter.desktop.in  at.shafq.checkwriter.gschema.xml  at.shafq.checkwriter.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: check-properties.c  check-properties.h  checkwriter-application.c  checkwriter-application.h  checkwriter-preferences.c  checkwriter-preferences.h  checkwriter-preferences.ui  checkwriter-window.c  checkwriter-window.h  checkwriter-window.ui  checkwriter.gresource.xml  main.c  meson.build  num-to-words.c
